--- a/customerSetup.html
+++ b/customerSetup.html
@@ -20,9 +20,22 @@
                             <label for="customerID">Customer ID:</label>
                             <input type="text" id="customerID" name="customerID" required>
                         </div>
-                        <div class="form-group">
-                            <label for="address">Address:</label>
-                            <input type="text" id="address" name="address">
+                        <div class="form-section radio-section-moved">
+                            <h2>Type</h2>
+                            <div class="form-row radio-group-wrapper">
+                                <div class="radio-group">
+                                    <input type="radio" id="typeCustomer" name="customerVendorType" value="Customer" checked>
+                                    <label for="typeCustomer">Customer</label>
+                                </div>
+                                <div class="radio-group">
+                                    <input type="radio" id="typeVendor" name="customerVendorType" value="Vendor">
+                                    <label for="typeVendor">Vendor</label>
+                                </div>
+                                <div class="radio-group">
+                                    <input type="radio" id="typeBoth" name="customerVendorType" value="Both">
+                                    <label for="typeBoth">Both</label>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
@@ -64,21 +77,10 @@
                         </div>
                     </div>
 
-                    <div class="form-section">
-                        <h2>Type</h2>
-                        <div class="form-row radio-group-wrapper">
-                            <div class="radio-group">
-                                <input type="radio" id="typeCustomer" name="customerVendorType" value="Customer" checked>
-                                <label for="typeCustomer">Customer</label>
-                            </div>
-                            <div class="radio-group">
-                                <input type="radio" id="typeVendor" name="customerVendorType" value="Vendor">
-                                <label for="typeVendor">Vendor</label>
-                            </div>
-                            <div class="radio-group">
-                                <input type="radio" id="typeBoth" name="customerVendorType" value="Both">
-                                <label for="typeBoth">Both</label>
-                            </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="address">Address:</label>
+                            <input type="text" id="address" name="address">
                         </div>
                     </div>
 
