--- a/customerSetup.html
+++ b/customerSetup.html
@@ -13,7 +13,7 @@
 <body>
     <div class="main-content-wrapper">
         <div class="container form-container">
-            <h1>Customer Setup </h1>
+            <h1>Customer Setup</h1>
 
             <div class="form-section">
                 <h2>Customer Details</h2>
@@ -194,7 +194,6 @@
                         </div>
                     </div>
 
-                    <!-- Buttons with Show/Hide list moved here -->
                     <div class="form-actions">
                         <button type="submit">Submit</button>
                         <button type="button" id="printListBtn">Print List</button>
@@ -225,11 +224,24 @@
                 <h2 class="list-heading">Customers List</h2>
                 <div class="list-controls">
                     <div class="search-group">
-                        <input
-                            type="text"
-                            id="searchByCustomerName"
-                            placeholder="Search all columns (CustomerID, Name, Father Name, Address, CNIC, Cell)"
-                        />
+                        <label for="searchByCustomerID">Search by Customer ID:</label>
+                        <input type="text" id="searchByCustomerID" placeholder="Enter Customer ID" />
+                    </div>
+                    <div class="search-group">
+                        <label for="searchByCustomerName">Search by Name:</label>
+                        <input type="text" id="searchByCustomerName" placeholder="Enter Customer Name" />
+                    </div>
+                    <div class="search-group">
+                        <label for="searchByFatherName">Search by Father Name:</label>
+                        <input type="text" id="searchByFatherName" placeholder="Enter Father Name" />
+                    </div>
+                    <div class="search-group">
+                        <label for="searchByAddress">Search by Address:</label>
+                        <input type="text" id="searchByAddress" placeholder="Enter Address" />
+                    </div>
+                    <div class="search-group">
+                        <label for="searchByPrimaryCell">Search by Primary Cell No:</label>
+                        <input type="text" id="searchByPrimaryCell" placeholder="Enter Primary Cell No" />
                     </div>
                     <select id="printSelection" class="control-dropdown">
                         <option value="all">Print All Columns</option>
@@ -290,6 +302,40 @@
                                     </button>
                                 </td>
                             </tr>
+                            <tr>
+                                <td>UD-2025-0799</td>
+                                <td>Huzaifa Ahmed</td>
+                                <td>Kamran Ahmed</td>
+                                <td>Karachi </td>
+                                <td>42201-1436767-7</td>
+                                <td>03445672129</td>
+                                <td class="action-buttons">
+                                    <button
+                                        class="icon-btn view-btn"
+                                        title="View"
+                                    >
+                                        <i class="fas fa-eye"></i>
+                                    </button>
+                                    <button
+                                        class="icon-btn edit-btn"
+                                        title="Edit"
+                                    >
+                                        <i class="fas fa-edit"></i>
+                                    </button>
+                                    <button
+                                        class="icon-btn delete-btn"
+                                        title="Delete"
+                                    >
+                                        <i class="fas fa-trash"></i>
+                                    </button>
+                                    <button
+                                        class="icon-btn print-btn"
+                                        title="Print"
+                                    >
+                                        <i class="fas fa-print"></i>
+                                    </button>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -297,6 +343,7 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="customerSetup.js"></script>
 </body>
 </html>
