--- a/customerSetup.html
+++ b/customerSetup.html
@@ -71,6 +71,7 @@
                                     name="relation[]"
                                     class="relation-dropdown"
                                 >
+                                <option value="">Select Relation</option>
                                     <option value="S/o">S/o</option>
                                     <option value="W/o">W/o</option>
                                     <option value="D/o">D/o</option>
